<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.kohlschutter.dumbo</groupId>
    <artifactId>dumbo-parent</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <parent>
        <groupId>com.kohlschutter</groupId>
        <artifactId>kohlschutter-parent</artifactId>
        <version>1.5.1</version>
        <relativePath>../kohlschutter-parent/pom.xml</relativePath>
    </parent>

    <properties>
        <kohlschutter.project.base.directory>${project.basedir}</kohlschutter.project.base.directory>
        <kohlschutter.project.notice.file>${kohlschutter.project.base.directory}/NOTICE</kohlschutter.project.notice.file>
        <dumbo.project.basedir>${project.basedir}</dumbo.project.basedir>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.build.resourceEncoding>UTF-8</project.build.resourceEncoding>
        <file.encoding>UTF-8</file.encoding>
        <maven.compile.encoding>UTF-8</maven.compile.encoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>

    <organization>
        <name>Kohlschütter Search Intelligence</name>
        <url>https://www.kohlschutter.com/</url>
    </organization>
    <developers>
        <developer>
            <name>Christian Kohlschütter</name>
            <email>christian@kohlschutter.com</email>
        </developer>
    </developers>
    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <modules>
        <module>dumbo-jabsorb</module>
        <module>dumbo-core</module>
        <module>dumbo-extensions</module>
        <module>dumbo-helloworld</module>
    </modules>
</project>
